    * smarter address bar completer will show better search results
    * new User Agent manager lets you set User Agent per site
    * new restore session page lets you choose which tabs you want to restore
    * new scheme handler for file protocol allows browsing through directories
    * new option to show loading progress in address bar
    * new option to hide close button on tabs
    * fixed visibility of navigation bar in fullscreen
    * fixed bad position of add tab button when there is a lot of tabs
    * fixed gui with RTL languages
    * fixed issue with infinite opening mailto links
    * fixed issue with showing warning after creating new profile
    * fixed clearing highlight when search text not found
    * fixed closing bookmarks menu when menu toolbar is hidden
    * fixed occasional crashes when closing tab while it is still loading

Version 1.3.1
    * released 16 July 2012
    * Ctrl+= shortcut for + zoom in webview
    * Ctrl+Enter shortcut in PIM plugin now also works with enter on numpad
    * don't append QupZilla string to changed user agent
    * fixed ' and " chars in speed dial's input fields
    * fixed zooming with Ctrl+Wheel for some users
    * fixed issues with cookies filtering
    * fixed $subdocument matching in AdBlock
    * fixed $third-party in AdBlock rules when Referer header is empty
    * fixed issue with notification settings always reverting to osd notifications
    * fixed downloading UTF-8 subscriptions in AdBlock (eg. Ru Adlist)

Version 1.3.0
    * released 11 July 2012
    * new Ukrainian translation
    * new plugins: GreaseMonkey and PIM (Personal Information Manager)
    * new command line option to open new window with url
    * can now open .xhtml files from open file dialog
    * added animated tab previews with option to turn animations off
    * possibility to change icon of bookmarks
    * ssl manager now can import own certificate
    * clear recent history now remembers last checked options