@@ -18,6 +18,7 @@ Version 1.3.5
     * new scheme handler for file protocol allows browsing through directories
     * new option to show loading progress in address bar
     * new option to hide close button on tabs
+    * new option to start new instance with --no-remote option
     * fixed visibility of navigation bar in fullscreen
     * fixed bad position of add tab button when there is a lot of tabs
     * fixed gui with RTL languages
